--- a/index.html
+++ b/index.html
@@ -1,27 +1,89 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+  <!-- FontAweSome -->
+  <script src="https://use.fontawesome.com/75459666dd.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.css"
+    integrity="sha512-E+53kXnJyuZFSz75xSmTfCpUNj3gp9Bd80TeQQMTPJTVWDRHPOpEYczGwWtsZXvaiz27cqvhdH8U+g/NMYua3A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Optional JavaScript; choose one of the two! -->
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <title>Hello, world!</title>
+</head>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
+<body>
+  <header>
+    <div class="container">
+      <div class="row align-items-center p-2">
+        <div class="col-10">
+          <h4>START BOOTSTRAP</h4>
+        </div>
+        <div class="col-2">
+          <span><i class="fa-solid fa-bars"></i></span>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <section class="section_1 py-2">
+    <div class="row row-cols-1 justify-content-center">
+
+      <img class="col-8" src="img/avatar.svg" alt="">
+
+      <h2 class="col-12 py-3">START BOOTSTRAP</h2>
+
+      <div class="star_line col-4 py-1">
+        <i class="fa-solid fa-minus"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-minus"></i>
+      </div>
+
+      <span class="col-11 py-1">GRAPHIC ARTIST-WEB DESIGNER-ILLUSTRATOR</span>
+    </div>
+  </section>
+
+  <section>
+    <div class="row row-cols-1 justify-content-center">
+
+      <h3 class="col-12 py-3">PORTFOLIO</h3>
+
+      <div class="star_line col-4 py-1">
+        <i class="fa-solid fa-minus"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-minus"></i>
+      </div>
+      <div class="bg_darkred col-8">
+        <img src="img/cabin.png" alt="Cabin">
+      </div>
+      <div class="bg_lightblue col-8">
+        <img src="img/cake.png" alt="Cabin">
+      </div>
+      <div class="bg_black col-8">
+        <img src="img/circus.png" alt="Cabin">
+      </div>
+      <div class="bg_blue col-8">
+        <img src="img/game.png" alt="Cabin">
+      </div>
+      <div class="bg_darkblue col-8">
+        <img src="img/safe.png" alt="Cabin">
+      </div>
+      <div class="bg_grey col-8">
+        <img src="img/submarine.png" alt="Cabin">
+      </div>
+
+    </div>
+  </section>
+
+
+</body>
+
 </html>
