--- a/index.html
+++ b/index.html
@@ -51,32 +51,32 @@
     </div>
   </section>
 
-  <section>
+  <section class="section_2 py-2">
     <div class="row row-cols-1 justify-content-center">
 
-      <h3 class="col-12 py-3">PORTFOLIO</h3>
+      <h3 class="col py-3">PORTFOLIO</h3>
 
-      <div class="star_line col-4 py-1">
+      <div class="star_line col py-1">
         <i class="fa-solid fa-minus"></i>
         <i class="fa-solid fa-star"></i>
         <i class="fa-solid fa-minus"></i>
       </div>
-      <div class="bg_darkred col-8">
+      <div class="bg_darkred col">
         <img src="img/cabin.png" alt="Cabin">
       </div>
-      <div class="bg_lightblue col-8">
+      <div class="bg_lightblue col">
         <img src="img/cake.png" alt="Cabin">
       </div>
-      <div class="bg_black col-8">
+      <div class="bg_black col">
         <img src="img/circus.png" alt="Cabin">
       </div>
-      <div class="bg_blue col-8">
+      <div class="bg_blue col">
         <img src="img/game.png" alt="Cabin">
       </div>
-      <div class="bg_darkblue col-8">
+      <div class="bg_darkblue col">
         <img src="img/safe.png" alt="Cabin">
       </div>
-      <div class="bg_grey col-8">
+      <div class="bg_grey col">
         <img src="img/submarine.png" alt="Cabin">
       </div>
 
