--- a/index.html
+++ b/index.html
@@ -47,39 +47,94 @@
         <i class="fa-solid fa-minus"></i>
       </div>
 
-      <span class="col-11 py-1">GRAPHIC ARTIST-WEB DESIGNER-ILLUSTRATOR</span>
+      <span class="col-12 py-1 text-center">GRAPHIC ARTIST-WEB DESIGNER-ILLUSTRATOR</span>
     </div>
   </section>
 
   <section class="section_2 py-2">
-    <div class="row row-cols-1 justify-content-center">
+    <div class="container">
+      <div class="row row-cols-1 justify-content-center">
 
-      <h3 class="col py-3">PORTFOLIO</h3>
+        <h3 class="col-5 py-2 text-center mt-2">PORTFOLIO</h3>
 
-      <div class="star_line col py-1">
-        <i class="fa-solid fa-minus"></i>
-        <i class="fa-solid fa-star"></i>
-        <i class="fa-solid fa-minus"></i>
+        <div class="star_line col py-2">
+          <i class="fa-solid fa-minus"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-minus"></i>
+        </div>
+        <div class="bg_darkred col-11 d-flex justify-content-center rounded m-3">
+          <img src="img/cabin.png" alt="Cabin">
+        </div>
+        <div class="bg_lightblue col-11 d-flex justify-content-center rounded m-3">
+          <img src="img/cake.png" alt="Cabin">
+        </div>
+        <div class="bg_black col-11 d-flex justify-content-center rounded m-3">
+          <img src="img/circus.png" alt="Cabin">
+        </div>
+        <div class="bg_blue col-11 d-flex justify-content-center rounded m-3">
+          <img src="img/game.png" alt="Cabin">
+        </div>
+        <div class="bg_darkblue col-11 d-flex justify-content-center rounded m-3">
+          <img src="img/safe.png" alt="Cabin">
+        </div>
+        <div class="bg_grey col-11 d-flex justify-content-center rounded m-3">
+          <img src="img/submarine.png" alt="Cabin">
+        </div>
       </div>
-      <div class="bg_darkred col">
-        <img src="img/cabin.png" alt="Cabin">
-      </div>
-      <div class="bg_lightblue col">
-        <img src="img/cake.png" alt="Cabin">
-      </div>
-      <div class="bg_black col">
-        <img src="img/circus.png" alt="Cabin">
-      </div>
-      <div class="bg_blue col">
-        <img src="img/game.png" alt="Cabin">
-      </div>
-      <div class="bg_darkblue col">
-        <img src="img/safe.png" alt="Cabin">
-      </div>
-      <div class="bg_grey col">
-        <img src="img/submarine.png" alt="Cabin">
-      </div>
+    </div>
 
+  </section>
+  <section class="section_3 bg_green py-3">
+    <div class="container">
+      <div class="row row-cols-1 justify-content-center">
+
+        <h3 class="col-5 py-1 text-center mt-2">ABOUT</h3>
+
+        <div class="star_line col py-1">
+          <i class="fa-solid fa-minus"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-minus"></i>
+        </div>
+
+        <p class="col-9 py-2">Freelancer is a free bootstrap theme created by Start Bootstrap.
+          The download includes the complete source files including HTML, CSS, and
+          JavaScript as well as optional LESS stylesheets for easy costumization.
+        </p>
+        <p class="col-9">
+          Whether you're a student looking to showcase your work, a professional looking to
+          attract clients, or a graphic artist looking to share your projects, this
+          template is the perfect starting point!
+        </p>
+
+        <button class="col-4 py-1 px-2 border border-white bg-transparent">Download</button>
+      </div>
+    </div>
+  </section>
+
+  <section class="section_4 py-3">
+    <div class="container">
+      <div class="row row-cols-1 justify-content-center">
+
+        <h3 class="col-5 py-1 text-center mt-2">ABOUT</h3>
+
+        <div class="star_line col py-1">
+          <i class="fa-solid fa-minus"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-minus"></i>
+        </div>
+
+        <p class="col-9 py-2">Freelancer is a free bootstrap theme created by Start Bootstrap.
+          The download includes the complete source files including HTML, CSS, and
+          JavaScript as well as optional LESS stylesheets for easy costumization.
+        </p>
+        <p class="col-9">
+          Whether you're a student looking to showcase your work, a professional looking to
+          attract clients, or a graphic artist looking to share your projects, this
+          template is the perfect starting point!
+        </p>
+
+        <button class="col-4 py-1 px-2 border border-white bg-transparent">Download</button>
+      </div>
     </div>
   </section>
 
