--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
         <div class="col-2">
           <span><i class="fa-solid fa-bars"></i></span>
         </div>
+
+        <nav class="d-none">
+          <ul>
+            <li>PORTFOLIO</li>
+            <li>ABOUT</li>
+            <li>CONTACT</li>
+          </ul>
+        </nav>
+
       </div>
     </div>
   </header>
@@ -62,23 +71,25 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-minus"></i>
         </div>
-        <div class="bg_darkred col-11 d-flex justify-content-center rounded m-3">
+
+        <div class="col-11 col-md-6 col-lg-4 bg_darkred d-flex justify-content-center rounded g-2">
           <img src="img/cabin.png" alt="Cabin">
         </div>
-        <div class="bg_lightblue col-11 d-flex justify-content-center rounded m-3">
+        <div class="col-11 col-md-6 col-lg-4 bg_lightblue d-flex justify-content-center rounded g-2">
           <img src="img/cake.png" alt="Cabin">
         </div>
-        <div class="bg_black col-11 d-flex justify-content-center rounded m-3">
+        <div class="col-11 col-md-6 col-lg-4 bg_black d-flex justify-content-center rounded g-2">
           <img src="img/circus.png" alt="Cabin">
         </div>
-        <div class="bg_blue col-11 d-flex justify-content-center rounded m-3">
+        <div class="col-11 col-md-6 col-lg-4 bg_blue d-flex justify-content-center rounded g-2">
           <img src="img/game.png" alt="Cabin">
         </div>
-        <div class="bg_darkblue col-11 d-flex justify-content-center rounded m-3">
+        <div class="col-11 col-md-6 col-lg-4 bg_darkblue d-flex justify-content-center rounded g-2">
           <img src="img/safe.png" alt="Cabin">
         </div>
-        <div class="bg_grey col-11 d-flex justify-content-center rounded m-3">
+        <div class="col-11 col-md-6 col-lg-4 bg_grey d-flex justify-content-center rounded g-2">
           <img src="img/submarine.png" alt="Cabin">
+
         </div>
       </div>
     </div>
@@ -96,11 +107,11 @@
           <i class="fa-solid fa-minus"></i>
         </div>
 
-        <p class="col-9 py-2">Freelancer is a free bootstrap theme created by Start Bootstrap.
+        <p class="col-9 col-md-6 py-1">Freelancer is a free bootstrap theme created by Start Bootstrap.
           The download includes the complete source files including HTML, CSS, and
           JavaScript as well as optional LESS stylesheets for easy costumization.
         </p>
-        <p class="col-9">
+        <p class="col-9 col-md-6 py-1">
           Whether you're a student looking to showcase your work, a professional looking to
           attract clients, or a graphic artist looking to share your projects, this
           template is the perfect starting point!
@@ -115,7 +126,7 @@
     <div class="container">
       <div class="row row-cols-1 justify-content-center">
 
-        <h3 class="col-5 py-1 text-center mt-2">ABOUT</h3>
+        <h3 class="col-7 py-1 text-center mt-2">CONTACT ME</h3>
 
         <div class="star_line col py-1">
           <i class="fa-solid fa-minus"></i>
@@ -123,22 +134,57 @@
           <i class="fa-solid fa-minus"></i>
         </div>
 
-        <p class="col-9 py-2">Freelancer is a free bootstrap theme created by Start Bootstrap.
-          The download includes the complete source files including HTML, CSS, and
-          JavaScript as well as optional LESS stylesheets for easy costumization.
-        </p>
-        <p class="col-9">
-          Whether you're a student looking to showcase your work, a professional looking to
-          attract clients, or a graphic artist looking to share your projects, this
-          template is the perfect starting point!
-        </p>
+        <form class="col-8">
+          <div class="mb-3">
+            <label for="exampleInputName1" class="form-label">Name</label>
+            <input type="Name" class="form-control" id="exampleInputPassword1">
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email Address</label>
+            <input type="Email" class="form-control" id="exampleInputPassword1">
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Phone Number</label>
+            <input type="Phone" class="form-control" id="exampleInputPassword1">
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Messagge</label>
+            <input type="Messagge" class="form-control" id="exampleInputPassword1">
+          </div>
 
-        <button class="col-4 py-1 px-2 border border-white bg-transparent">Download</button>
+          <button class="col-4 py-2 around border-0 bg_green ">Send</button>
+        </form>
       </div>
-    </div>
   </section>
 
+  <footer class="py-4">
+    <div class="container">
+      <div class="row row-cols-1 justify-content-center">
 
+        <div class="col col-md-4 text-center">
+          <h5 class="col-12 pt-1 mt-4">LOCATION</h5>
+          <span class="col-12 py-1">2215 John Daniel Drive Clark, MO 54243</span>
+        </div>
+
+        <div class="col col-md-4">
+          <h5 class="col-12 pt-1 text-center mt-4">AROUND THE WEB</h5>
+          <p class="col-12 d-flex justify-content-around">
+            <i class="fa-brands fa-facebook-f p-3 border border-white rounded-circle"></i>
+            <i class="fa-brands fa-google-plus-g p-3 border border-white rounded-circle"></i>
+            <i class="fa-brands fa-twitter p-3 border border-white rounded-circle"></i>
+            <i class="fa-brands fa-linkedin-in p-3 border border-white rounded-circle"></i>
+          </p>
+        </div>
+
+        <div class="col col-md-4 text-center">
+          <h5 class="col-12 pt-1  mt-4">ABOUT FREELANCER</h5>
+          <p class="col-12 py-1">
+            Freelance is a free to use, open source Bootstrap theme create by
+            <span>Start Bootstrap</span>.
+          </p>
+        </div>
+      </div>
+  </footer>
 </body>
 
 </html>
