--- a/index.html
+++ b/index.html
@@ -24,19 +24,23 @@
   <header>
     <div class="container">
       <div class="row align-items-center p-2">
-        <div class="col-10">
+
+        <div class="col-6">
           <h4>START BOOTSTRAP</h4>
         </div>
-        <div class="col-2">
-          <span><i class="fa-solid fa-bars"></i></span>
-        </div>
 
-        <nav class="d-none">
-          <ul>
-            <li>PORTFOLIO</li>
-            <li>ABOUT</li>
-            <li>CONTACT</li>
-          </ul>
+        <nav class="col-6 navbar navbar-expand-lg navbar-light">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+            <div class="navbar-nav justify-content-between">
+              <a class="nav-item nav-link active ac-white" href="#">PORTFOLIO<span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link ac-white" href="#">ABOUT</a>
+              <a class="nav-item nav-link ac-white" href="#">CONTACT</a>
+            </div>
+          </div>
         </nav>
 
       </div>
@@ -61,8 +65,8 @@
   </section>
 
   <section class="section_2 py-2">
-    <div class="container">
-      <div class="row row-cols-1 justify-content-center">
+    <div class="container container-md container-lg">
+      <div class="row row-cols-1 justify-content-center row-gap-1">
 
         <h3 class="col-5 py-2 text-center mt-2">PORTFOLIO</h3>
 
@@ -72,23 +76,23 @@
           <i class="fa-solid fa-minus"></i>
         </div>
 
-        <div class="col-11 col-md-6 col-lg-4 bg_darkred d-flex justify-content-center rounded g-2">
-          <img src="img/cabin.png" alt="Cabin">
+        <div class="col-11 col-md-6 col-lg-4  d-flex justify-content-center my-2">
+          <img class="bg_darkred rounded" src="img/cabin.png" alt="Cabin">
         </div>
-        <div class="col-11 col-md-6 col-lg-4 bg_lightblue d-flex justify-content-center rounded g-2">
-          <img src="img/cake.png" alt="Cabin">
+        <div class="col-11 col-md-6 col-lg-4  d-flex justify-content-center my-2">
+          <img class="bg_lightblue rounded" src="img/cake.png" alt="Cabin">
         </div>
-        <div class="col-11 col-md-6 col-lg-4 bg_black d-flex justify-content-center rounded g-2">
-          <img src="img/circus.png" alt="Cabin">
+        <div class="col-11 col-md-6 col-lg-4  d-flex justify-content-center my-2">
+          <img class="bg_black rounded" src="img/circus.png" alt="Cabin">
         </div>
-        <div class="col-11 col-md-6 col-lg-4 bg_blue d-flex justify-content-center rounded g-2">
-          <img src="img/game.png" alt="Cabin">
+        <div class="col-11 col-md-6 col-lg-4  d-flex justify-content-center my-2">
+          <img class="bg_blue rounded" src="img/game.png" alt="Cabin">
         </div>
-        <div class="col-11 col-md-6 col-lg-4 bg_darkblue d-flex justify-content-center rounded g-2">
-          <img src="img/safe.png" alt="Cabin">
+        <div class="col-11 col-md-6 col-lg-4  d-flex justify-content-center my-2">
+          <img class="bg_darkblue rounded" src="img/safe.png" alt="Cabin">
         </div>
-        <div class="col-11 col-md-6 col-lg-4 bg_grey d-flex justify-content-center rounded g-2">
-          <img src="img/submarine.png" alt="Cabin">
+        <div class="col-11 col-md-6 col-lg-4  d-flex justify-content-center my-2">
+          <img class="bg_grey rounded" src="img/submarine.png" alt="Cabin">
 
         </div>
       </div>
