--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </header>
 
   <section class="section_1 py-2">
-    <div class="row row-cols-1 justify-content-center">
+    <div class=" container row row-cols-1 justify-content-center">
 
       <img class="col-8" src="img/avatar.svg" alt="">
 
