--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
           <h4>START BOOTSTRAP</h4>
         </div>
 
-        <nav class="col-6 navbar navbar-expand-lg navbar-light">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        <nav class="col-6 navbar navbar-expand-lg navbar-light justify-content-end ">
+          <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon ac-nav-white"></span>
           </button>
-          <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
-            <div class="navbar-nav justify-content-between">
-              <a class="nav-item nav-link active ac-white" href="#">PORTFOLIO<span class="sr-only">(current)</span></a>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link ac-white" href="#">PORTFOLIO<span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link ac-white" href="#">ABOUT</a>
               <a class="nav-item nav-link ac-white" href="#">CONTACT</a>
             </div>
@@ -48,8 +48,7 @@
   </header>
 
   <section class="section_1 py-2">
-    <div class=" container row row-cols-1 justify-content-center">
-
+    <div class="row row-cols-1 justify-content-center">
       <img class="col-8" src="img/avatar.svg" alt="">
 
       <h2 class="col-12 py-3">START BOOTSTRAP</h2>
