--- a/index.html
+++ b/index.html
@@ -25,17 +25,18 @@
     <div class="container">
       <div class="row align-items-center p-2">
 
-        <div class="col-6">
+        <div class="col-7">
           <h4>START BOOTSTRAP</h4>
         </div>
 
-        <nav class="col-6 navbar navbar-expand-lg navbar-light justify-content-end ">
-          <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="col-5 navbar navbar-expand-lg navbar-light justify-content-end ">
+          <button class="navbar-toggler border-0 d-md-none" type="button" data-toggle="collapse"
+            data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon ac-nav-white"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+          <div class="collapse navbar-collapse justify-content-end d-md-inline" id="navbarNavAltMarkup">
+            <div class="navbar-nav flex-row justify-content-between">
               <a class="nav-item nav-link ac-white" href="#">PORTFOLIO<span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link ac-white" href="#">ABOUT</a>
               <a class="nav-item nav-link ac-white" href="#">CONTACT</a>
@@ -48,18 +49,20 @@
   </header>
 
   <section class="section_1 py-2">
-    <div class="row row-cols-1 justify-content-center">
-      <img class="col-8" src="img/avatar.svg" alt="">
+    <div class="container container-md container-lg">
+      <div class="row row-cols-1 justify-content-center">
+        <img class="col-6 col-md-5" src="img/avatar.svg" alt="">
 
-      <h2 class="col-12 py-3">START BOOTSTRAP</h2>
+        <h2 class="col-12 col-md-12 py-2 display-4 text-center">START BOOTSTRAP</h2>
 
-      <div class="star_line col-4 py-1">
-        <i class="fa-solid fa-minus"></i>
-        <i class="fa-solid fa-star"></i>
-        <i class="fa-solid fa-minus"></i>
+        <div class="star_line col-4 py-1">
+          <i class="fa-solid fa-minus"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-minus"></i>
+        </div>
+
+        <h6 class="col-12 py-1 mb-3 text-center">GRAPHIC ARTIST-WEB DESIGNER-ILLUSTRATOR</h6>
       </div>
-
-      <span class="col-12 py-1 text-center">GRAPHIC ARTIST-WEB DESIGNER-ILLUSTRATOR</span>
     </div>
   </section>
 
@@ -67,7 +70,7 @@
     <div class="container container-md container-lg">
       <div class="row row-cols-1 justify-content-center row-gap-1">
 
-        <h3 class="col-5 py-2 text-center mt-2">PORTFOLIO</h3>
+        <h3 class="col-5 py-2 text-center mt-2 display-4">PORTFOLIO</h3>
 
         <div class="star_line col py-2">
           <i class="fa-solid fa-minus"></i>
