--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="container">
       <div class="row row-cols-1 justify-content-center">
 
-        <h3 class="col-5 py-1 text-center mt-2">ABOUT</h3>
+        <h3 class="col-5 text-center mt-2 display-4 mb-0">ABOUT</h3>
 
         <div class="star_line col py-1">
           <i class="fa-solid fa-minus"></i>
@@ -113,17 +113,17 @@
           <i class="fa-solid fa-minus"></i>
         </div>
 
-        <p class="col-9 col-md-6 py-1">Freelancer is a free bootstrap theme created by Start Bootstrap.
+        <p class="col-9 col-md-5 py-1">Freelancer is a free bootstrap theme created by Start Bootstrap.
           The download includes the complete source files including HTML, CSS, and
           JavaScript as well as optional LESS stylesheets for easy costumization.
         </p>
-        <p class="col-9 col-md-6 py-1">
+        <p class="col-9 col-md-5 py-1">
           Whether you're a student looking to showcase your work, a professional looking to
           attract clients, or a graphic artist looking to share your projects, this
           template is the perfect starting point!
         </p>
 
-        <button class="col-4 py-1 px-2 border border-white bg-transparent">Download</button>
+        <button class="col-3 py-1 px-2 border border-white bg-transparent">Download</button>
       </div>
     </div>
   </section>
@@ -155,10 +155,10 @@
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Messagge</label>
-            <input type="Messagge" class="form-control" id="exampleInputPassword1">
+            <input type="textarea" class="form-control" id="exampleInputPassword1">
           </div>
 
-          <button class="col-4 py-2 around border-0 bg_green ">Send</button>
+          <button class="col-4 col-md-3 py-2 around border-0 bg_green ">Send</button>
         </form>
       </div>
   </section>
