--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
   <section class="section_1 py-2">
     <div class="container container-md container-lg">
-      <div class="row row-cols-1 justify-content-center">
-        <img class="col-6 col-md-5" src="img/avatar.svg" alt="">
+      <div class="row row-cols-1 justify-content-center py-lg-4">
+        <img class="col-6 col-md-5 col-lg-3" src="img/avatar.svg" alt="">
 
         <h2 class="col-12 col-md-12 py-2 display-4 text-center">START BOOTSTRAP</h2>
 
@@ -67,7 +67,7 @@
   </section>
 
   <section class="section_2 py-2">
-    <div class="container container-md container-lg">
+    <div class="container container-md container-lg py-lg-4">
       <div class="row row-cols-1 justify-content-center row-gap-1">
 
         <h3 class="col-5 py-2 text-center mt-2 display-4">PORTFOLIO</h3>
@@ -101,30 +101,42 @@
     </div>
 
   </section>
+
   <section class="section_3 bg_green py-3">
     <div class="container">
-      <div class="row row-cols-1 justify-content-center">
+      <div class="row row-cols-1 py-lg-4 text-center">
 
-        <h3 class="col-5 text-center mt-2 display-4 mb-0">ABOUT</h3>
+        <h3 class="col mt-2 display-4 mb-0">ABOUT</h3>
 
         <div class="star_line col py-1">
           <i class="fa-solid fa-minus"></i>
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-minus"></i>
         </div>
+      </div>
 
-        <p class="col-9 col-md-5 py-1">Freelancer is a free bootstrap theme created by Start Bootstrap.
+      <div class="row py-lg-2">
+        <p class="col-8 offset-2 col-md-4 offset-lg-1 col-lg-5 py-1">Freelancer is a free bootstrap theme created by
+          Start
+          Bootstrap.
           The download includes the complete source files including HTML, CSS, and
           JavaScript as well as optional LESS stylesheets for easy costumization.
         </p>
-        <p class="col-9 col-md-5 py-1">
+        <p class="col-8 offset-2 offset-md-0 col-md-4 col-lg-5 py-1">
           Whether you're a student looking to showcase your work, a professional looking to
           attract clients, or a graphic artist looking to share your projects, this
           template is the perfect starting point!
         </p>
-
-        <button class="col-3 py-1 px-2 border border-white bg-transparent">Download</button>
       </div>
+
+      <div class="row py-lg-4 justify-content-center">
+        <button class="col-3 col-lg-2 py-1 px-2 border border-white bg-transparent">
+
+          Download
+        </button>
+      </div>
+
+    </div>
     </div>
   </section>
 
@@ -132,7 +144,7 @@
     <div class="container">
       <div class="row row-cols-1 justify-content-center">
 
-        <h3 class="col-7 py-1 text-center mt-2">CONTACT ME</h3>
+        <h3 class="col-7 py-1 text-center mt-2 display-4">CONTACT ME</h3>
 
         <div class="star_line col py-1">
           <i class="fa-solid fa-minus"></i>
@@ -154,11 +166,11 @@
             <input type="Phone" class="form-control" id="exampleInputPassword1">
           </div>
           <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Messagge</label>
-            <input type="textarea" class="form-control" id="exampleInputPassword1">
+            <label for="message">Message</label>
+            <textarea class="form-control border-0 border-bottom" id="message" rows="3"></textarea>
           </div>
 
-          <button class="col-4 col-md-3 py-2 around border-0 bg_green ">Send</button>
+          <button class="col-4 col-md-3 col-lg-2 py-2 around border-0 bg_green">Send</button>
         </form>
       </div>
   </section>
@@ -172,7 +184,7 @@
           <span class="col-12 py-1">2215 John Daniel Drive Clark, MO 54243</span>
         </div>
 
-        <div class="col col-md-4">
+        <div class="col col-md-4 col-lg-3">
           <h5 class="col-12 pt-1 text-center mt-4">AROUND THE WEB</h5>
           <p class="col-12 d-flex justify-content-around">
             <i class="fa-brands fa-facebook-f p-3 border border-white rounded-circle"></i>
